DCD alignment resolved

--- a/src/components/author.css
+++ b/src/components/author.css
@@ -39,6 +39,7 @@
 }
 .footer-img {
   max-width: 10%;
+  min-width: 100px;
   height: auto;
   margin-left: 1%;
   margin-right: 1%;
